--- a/package.json
+++ b/package.json
@@ -18,16 +18,22 @@
   "homepage": "https://github.com/kl0sin/employee-list#readme",
   "devDependencies": {
     "autoprefixer": "^7.2.5",
+    "babel-core": "^6.26.0",
     "babel-preset-es2016": "^6.24.1",
     "browser-sync": "^2.23.5",
     "eslint": "^4.16.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-clean": "^0.4.0",
+    "gulp-clean-css": "^3.9.2",
     "gulp-concat": "^2.6.1",
+    "gulp-concat-css": "^3.0.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-htmlmin": "^4.0.0",
     "gulp-inject": "^4.3.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.3",
+    "gulp-uglify": "^3.0.0",
     "run-sequence": "^2.2.1"
   }
 }
