--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "babel-preset-es2016": "^6.24.1",
     "browser-sync": "^2.23.5",
     "eslint": "^4.16.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-clean": "^0.4.0",
