--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "autoprefixer": "^7.2.5",
     "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2016": "^6.24.1",
     "browser-sync": "^2.23.5",
     "eslint": "^4.16.0",
@@ -38,6 +39,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.3",
     "gulp-uglify": "^3.0.0",
+    "jest": "^22.1.4",
     "run-sequence": "^2.2.1"
   }
 }
