--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^3.0.0",
     "gulp-cssnano": "^2.1.2",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^4.0.0",
     "gulp-inject": "^4.3.0",
     "gulp-sass": "^3.1.0",
